[project]
name = "stock-price"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "yfinance>=0.2.52",
]

[tool.uv]
dev-dependencies = [
    "pylint>=3.3.4",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "stock-price",
    "coverage>=7.6.10",
    "pytest-cov>=6.0.0",
]

[tool.uv.sources]
stock-price = { workspace = true }
